--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     align-items: center;
     flex-direction: column;
     gap: 30px;
-    background:gray;
+    background:bisque;
 }
 
 .inputBox{
@@ -25,7 +25,7 @@ body{
     background: #1d2b3a;
     border-radius: 10px;
     outline: none;
-    color: #fff;
+    color: whitesmoke;
     font-size: 1em;
     transition: 0.5s;
 }
@@ -82,6 +82,9 @@ a{
 }
 a:hover{
     letter-spacing: 0.25em;
+    background: var(--clr);
+    color: var(--clr);
+    box-shadow: 0 0 35px var(--clr);
 }
 a::before{
     content: '';
@@ -97,4 +100,39 @@ a i{
     position: absolute;
     inset: 0;
     display: block;
+}
+a i::before{
+    content: '';
+    position:absolute;
+    top: -3.5;
+    left: 80%;
+    width: 10px;
+    height: 5px;
+    border: 2px solid var(--clr);
+    background: #272827;
+    transform:translateX(-50%);
+    transition: 0.5;
+
+}
+a:hover i::before{
+    width: 20px;
+    left: 20%;
+}
+
+a i::after{
+    content: '';
+    position:absolute;
+    bottom: -3.5px;
+    left: 20%;
+    width: 10px;
+    height: 5px;
+    border: 2px solid var(--clr);
+    background: #27282c;
+    transform: translateX(-50%);
+    transition: 0.5;
+
+}
+a:hover i::after{
+    width: 20px;
+    left: 80%;
 }
